// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/shared/components/Markers/markerStyles markerNormalIcon returns the inactive normal icon 1`] = `
Object {
  "anchor": Object {
    "x": 5,
    "y": 5,
  },
  "scaledSize": Object {
    "height": 11,
    "width": 11,
  },
  "url": "",
}
`;

exports[`ui/shared/components/Markers/markerStyles markerNormalIcon returns the paid normal icon 1`] = `
Object {
  "anchor": Object {
    "x": 8,
    "y": 8,
  },
  "scaledSize": Object {
    "height": 16,
    "width": 16,
  },
  "url": "",
}
`;

exports[`ui/shared/components/Markers/markerStyles markerNormalIcon returns the unpaid normal icon 1`] = `
Object {
  "anchor": Object {
    "x": 5,
    "y": 5,
  },
  "scaledSize": Object {
    "height": 11,
    "width": 11,
  },
  "url": "",
}
`;

exports[`ui/shared/components/Markers/markerStyles markerSelectedIcon returns the active paid selected icon when isPaid is true 1`] = `
Object {
  "anchor": Object {
    "x": 8,
    "y": 8,
  },
  "scaledSize": Object {
    "height": 16,
    "width": 16,
  },
  "url": "",
}
`;

exports[`ui/shared/components/Markers/markerStyles markerSelectedIcon returns the active unpaid selected icon when isPaid is false 1`] = `
Object {
  "anchor": Object {
    "x": 5,
    "y": 5,
  },
  "scaledSize": Object {
    "height": 11,
    "width": 11,
  },
  "url": "",
}
`;

exports[`ui/shared/components/Markers/markerStyles markerSelectedIcon returns the inactive selected icon when isPaid is false 1`] = `
Object {
  "anchor": Object {
    "x": 5,
    "y": 5,
  },
  "scaledSize": Object {
    "height": 11,
    "width": 11,
  },
  "url": "",
}
`;
